--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,8 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-# Production build
+# Build outputs
 dist/
 build/
 
@@ -28,7 +26,6 @@ build/
 Thumbs.db
 
 # Logs
-logs
 *.log
 
 # Runtime data
@@ -39,64 +36,7 @@ pids
 
 # Coverage directory used by tools like istanbul
 coverage/
-*.lcov
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Gatsby files
-.cache/
-public
-
-# Storybook build outputs
-.out
-.storybook-out
 
 # Temporary folders
 tmp/
 temp/
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Lock files (keep one based on your package manager)
-# package-lock.json
-# yarn.lock
-# pnpm-lock.yaml
-bun.lockb
