--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,13 +2,6 @@ name = "overlay-spirit"
 compatibility_date = "2024-09-19"
 pages_build_output_dir = "dist"
 
-# Pages configuration
-[pages_build_config]
-# Build command for Pages
-build_command = "npm run build"
-# Directory containing the built assets
-destination_dir = "dist"
-
 [vars]
 NODE_ENV = "production"
 
@@ -21,6 +14,15 @@ database_name = "overlay_spirit"
 [env.production.vars]
 NODE_ENV = "production"
 
+[[env.production.d1_databases]]
+binding = "DB"
+database_id = "ce057c27-eccb-498f-bd4a-5cc82d80da9f"
+database_name = "overlay_spirit"
+
 [[r2_buckets]]
+binding = "R2"
+bucket_name = "overlay-spirit"
+
+[[env.production.r2_buckets]]
 binding = "R2"
 bucket_name = "overlay-spirit"
